# esp-claw-iteration01

./: .gitignore  .gitlab-ci.yml
.gitlab/ci/: build.yml  build_apps.py  rules.yml
application/basic_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
application/basic_demo/fatfs_image/automation/: automations.json
application/basic_demo/fatfs_image/memory/: MEMORY.md
application/basic_demo/fatfs_image/router_rules/: router_rules.json
application/basic_demo/fatfs_image/skills/: im_send_file.md  im_send_picture.md  lua_run.md  lua_write.md  qq_send_file.md  skills_list.json  weather.md
application/basic_demo/main/: CMakeLists.txt  Kconfig.projbuild  app_claw.c  app_clawgent.c  app_clawgent.h  basic_demo_cli.c  basic_demo_lua_modules.c  basic_demo_settings.c  basic_demo_settings.h  basic_demo_wifi.c  basic_demo_wifi.h  config_http_server.c  idf_component.yml  main.c
application/basic_demo/main/lua_module/: lua_module_gpio.c  lua_module_gpio.h  lua_module_led_strip.c  lua_module_led_strip.h
application/basic_demo/main/web/: app.js  index.html  styles.css
arduino/: .gitignore  README.md
arduino/arduino_claw_uno/: arduino_claw_uno.ino  board_defs.h  claw_serial_protocol.cpp  claw_serial_protocol.h  cmd_analog.cpp  cmd_analog.h  cmd_gpio.cpp  cmd_gpio.h  cmd_i2c.cpp  cmd_i2c.h  cmd_servo.cpp  cmd_servo.h
arduino/host_bridge/: ai_shell.py  bridge.py  requirements.txt
components/cap_lua/: CMakeLists.txt
components/cap_lua/src/: cap_lua.c  cap_lua_internal.h  cap_lua_module_delay.c  cap_lua_storage.c
schemas/: automations.schema.json
(+18 files in other folders)
